updated to show buffer stuff

--- a/TestingData/tokenized_files/web.config
+++ b/TestingData/tokenized_files/web.config
@@ -1,7 +1,7 @@
-<add key="mykey1" value=__mykey1__ />
+<add key="mykey1" value={{mykey1}} />
 <add name="mykey2" 
-            connectionString=__mykey2__/>
-<add name="an-ip-address" hostAddress=__an-ip-address__/>
+            connectionString={{mykey2}}/>
+<add name="an-ip-address" hostAddress={{an-ip-address}}/>
 <add key="mykey3" 
 
 
@@ -10,14 +10,14 @@
 
 
 
-value=__mykey3__ />
+value={{mykey3}} />
 <add name="an_int" 
 
 
 
-            connectionString=__an_int__ />
+            connectionString={{an_int}} />
 <add name="System.Thing" value="System.Thing"/>
-<add key="mykey5" value=__mykey5__ />
+<add key="mykey5" value={{mykey5}} />
 <add name="mykey6" 
-            connectionString=__mykey6__/>
-<add name="someEndpoint" hostAddress=__someEndpoint__/>
+            connectionString={{mykey6}}/>
+<add name="someEndpoint" hostAddress={{someEndpoint}}/>
